@@ -30,9 +30,14 @@
 
 namespace Rcpp{
 
-template <int RTYPE, typename CTYPE>
+template <int RTYPE>
 class SimpleVector : public VectorBase {
 public:
+	
+	typedef typename traits::storage_type<RTYPE>::type value_type ;
+	typedef value_type* iterator ;
+	typedef value_type& reference ;
+	
 	SimpleVector() : VectorBase(), start(0){}
 	
 	SimpleVector(SEXP x) throw(RObject::not_compatible) : VectorBase(), start(0){
@@ -59,20 +64,20 @@ public:
 	}
 	
 #ifdef HAS_INIT_LISTS
-	SimpleVector( std::initializer_list<CTYPE> list ) : VectorBase(), start(0){
+	SimpleVector( std::initializer_list<value_type> list ) : VectorBase(), start(0){
 		assign( list.begin() , list.end() ) ;
 	}
 #endif
 
-	inline CTYPE& operator[]( const int& i ){ return start[i] ; }
-	inline CTYPE* begin() const{ return start ; }
-	inline CTYPE* end() const{ return start+Rf_length(m_sexp); }
+	inline reference operator[]( const int& i ){ return start[i] ; }
+	inline iterator begin() const{ return start ; }
+	inline iterator end() const{ return start+Rf_length(m_sexp); }
 	
-	inline CTYPE& operator()( const size_t& i) throw(RObject::index_out_of_bounds){
+	inline reference operator()( const size_t& i) throw(RObject::index_out_of_bounds){
 		return start[ offset(i) ] ;
 	}
 	
-	inline CTYPE& operator()( const size_t& i, const size_t& j) throw(VectorBase::not_a_matrix,RObject::index_out_of_bounds){
+	inline reference operator()( const size_t& i, const size_t& j) throw(VectorBase::not_a_matrix,RObject::index_out_of_bounds){
 		return start[ offset(i,j) ] ;
 	}
 	
@@ -87,10 +92,10 @@ public:
 	}
 
 private:
-	CTYPE* start ;
+	value_type* start ;
 	
 	virtual void update(){ 
-		start = internal::r_vector_start<RTYPE,CTYPE>(m_sexp) ;
+		start = internal::r_vector_start<RTYPE,value_type>(m_sexp) ;
 	}
 	
 	void init(){
